compiler/weave_syntax/tests/data/syntax/Function.error
error: Expected '[token:identifier]'
        --> <source>:3:38
         |
       3 | #[Inline, NoInline,] function Empty1(,a:A, b:B, #[foo] , {})
         |                                      ^
error: Expected '[token:identifier]'
        --> <source>:3:56
         |
       3 | #[Inline, NoInline,] function Empty1(,a:A, b:B, #[foo] , {})
         |                                                        ^
error: Expected '[token:identifier]'
        --> <source>:3:58
         |
       3 | #[Inline, NoInline,] function Empty1(,a:A, b:B, #[foo] , {})
         |                                                          ^
error: Unexpected tokens
        --> <source>:3:58
         |
       3 | #[Inline, NoInline,] function Empty1(,a:A, b:B, #[foo] , {})
         |                                                          ^^
error: Expected ':'
        --> <source>:19:27
         |
      19 |     return a ? b + c * d  d + e / c;
         |                           ^
error: Expected '[token:identifier]'
        --> <source>:35:24
         |
      35 |     if /*let Some(y)*/ = y {
         |                        ^
error: Expected '[token:identifier]'
        --> <source>:72:39
         |
      72 | function EndOfFileDuringStatement() { =42: a=5;}
         |                                       ^
error: Unexpected tokens
        --> <source>:72:42
         |
      72 | function EndOfFileDuringStatement() { =42: a=5;}
         |                                          ^^^^^^
error: Expected '[token:identifier]'
        --> <source>:78:11
         |
      78 | namespace namespace }
         |           ^^^^^^^^^
error: Expected '{'
        --> <source>:78:11
         |
      78 | namespace namespace }
         |           ^^^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:78:21
         |
      78 | namespace namespace }
         |                     ^
error: Expected '{'
        --> <source>:78:21
         |
      78 | namespace namespace }
         |                     ^
error: Unexpected tokens
        --> <source>:83:27
         |
      83 |             function W() {:z= a b c 4
         |                           ^^^^^^^^^^^
      84 |             R
         | ^^^^^^^^^^^^^
      85 |             U
         | ^^^^^^^^^^^^^
     ... |
      93 |             S
         | ^^^^^^^^^^^^^
      94 |             T
         | ^^^^^^^^^^^^^
      95 |             namespace; // this is commentos
         | ^^^^^^^^^^^^^^^^^^^^^^
error: Expected '}'
        --> <source>:96:1
         |
      96 | 
         | ^
error: Expected '}'
        --> <source>:96:1
         |
      96 | 
         | ^
error: Expected '}'
        --> <source>:96:1
         |
      96 | 
         | ^
error: Expected '}'
        --> <source>:96:1
         |
      96 | 
         | ^
error: Expected '}'
        --> <source>:96:1
         |
      96 | 
         | ^
